# ML-Mamba

./: .gitignore  .gitmodules  LICENSE  README.md  demo.ipynb  pyproject.toml  test.py  test2.py
cobra/conf/: config.json  datasets.py  models.py
cobra/models/: load.py  materialize.py
cobra/models/backbones/llm/: base_llm.py  mamba.py
cobra/models/backbones/llm/prompting/: base_prompter.py  zephyr_prompter.py
cobra/models/backbones/vision/: dinosiglip_vit.py
cobra/models/mamba/: modeling_mamba.py
cobra/models/vlms/: base_vlm.py  cobra.py
cobra/preprocessing/: materialize.py
cobra/preprocessing/datasets/: datasets.py
cobra/training/: materialize.py  metrics.py
cobra/training/strategies/: base_strategy.py  fsdp.py
cobra/util/: data_utils.py  nn_utils.py
mlmamba/conf/: config.json  datasets.py  models.py
mlmamba/models/: load.py  materialize.py  registry.py
mlmamba/models/backbones/llm/: base_llm.py  mamba.py
mlmamba/models/backbones/llm/prompting/: base_prompter.py  mamba_prompter.py  zephyr_prompter.py
mlmamba/models/backbones/vision/: base_vision.py  clip_vit.py  dinoclip_vit.py  dinosiglip_vit.py  dinov2_vit.py  in1k_vit.py  siglip_vit.py
mlmamba/models/mamba/: modeling_mamba.py
mlmamba/models/vlms/: __init__.py  base_vlm.py  mlmamba.py
mlmamba/preprocessing/: download.py  materialize.py
mlmamba/preprocessing/datasets/: datasets.py
mlmamba/training/: materialize.py  metrics.py
mlmamba/training/strategies/: base_strategy.py  ddp.py  fsdp.py
mlmamba/util/: batching_utils.py  data_utils.py  nn_utils.py
scripts/: generate.py  preprocess.py  pretrain.py
scripts/additional-datasets/: lvis_instruct_220k_hwj.py  lvis_instruct_4v.py
